# balami

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/balami/: __init__.py  base.py  constraints.py  nodes.py  parser.py  tokens.py  types.py
tests/: test_parser.py
